RESOLVED FIXED236516
Regression(r285501) Microsoft teams meeting URLs fail to open the app
https://bugs.webkit.org/show_bug.cgi?id=236516
Summary Regression(r285501) Microsoft teams meeting URLs fail to open the app
Chris Dumez
Reported 2022-02-11 10:21:51 PST
Microsoft teams meeting URLs fail to open the app since r287684.
Attachments
Patch (5.77 KB, patch)
2022-02-11 10:24 PST, Chris Dumez
no flags
Patch (5.73 KB, patch)
2022-02-11 10:43 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2022-02-11 10:22:01 PST
Chris Dumez
Comment 2 2022-02-11 10:24:10 PST
Geoffrey Garen
Comment 3 2022-02-11 10:34:52 PST
Comment on attachment 451721 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=451721&action=review > Source/WebCore/page/Quirks.cpp:1419 > +bool Quirks::shouldAllowNavigationToCustomProtocolWithoutUserGesture(StringView protocol, const SecurityOriginData& requesterOrigin) Can we disable the quirk when quirks are disabled in the Develop menu?
Chris Dumez
Comment 4 2022-02-11 10:40:13 PST
(In reply to Geoffrey Garen from comment #3) > Comment on attachment 451721 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=451721&action=review > > > Source/WebCore/page/Quirks.cpp:1419 > > +bool Quirks::shouldAllowNavigationToCustomProtocolWithoutUserGesture(StringView protocol, const SecurityOriginData& requesterOrigin) > > Can we disable the quirk when quirks are disabled in the Develop menu? It is not as easy as usually since we're in the UIProcess but I'll see if I can get the setting value from there.
Chris Dumez
Comment 5 2022-02-11 10:43:03 PST
Chris Dumez
Comment 6 2022-02-11 11:10:38 PST
(In reply to Geoffrey Garen from comment #3) > Comment on attachment 451721 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=451721&action=review > > > Source/WebCore/page/Quirks.cpp:1419 > > +bool Quirks::shouldAllowNavigationToCustomProtocolWithoutUserGesture(StringView protocol, const SecurityOriginData& requesterOrigin) > > Can we disable the quirk when quirks are disabled in the Develop menu? Done before landing.
EWS
Comment 7 2022-02-11 12:20:57 PST
Committed r289658 (247150@main): <https://commits.webkit.org/247150@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 451724 [details].
Sihui Liu
Comment 8 2022-02-11 14:54:00 PST
Is the regression point in the title correct?
Chris Dumez
Comment 9 2022-02-11 14:54:47 PST
(In reply to Sihui Liu from comment #8) > Is the regression point in the title correct? Hmm, no. I'll fix it, thanks.
Note You need to log in before you can comment on or make changes to this bug.